// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`start-case GET /start-case/add/confirmation should render "Case started" confirmation page 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-width-container">
        <div class="govuk-grid-row">
            <div class="govuk-grid-column-two-thirds govuk-!-padding-top-2">
                <div class="govuk-panel govuk-panel--confirmation">
                    <h1 class="govuk-panel__title"> Case started</h1>
                    <div class="govuk-panel__body">Case reference number
                        <br><strong>351062</strong>
                    </div>
                </div>
                <p class="govuk-body">Case timetable activated. The relevant parties have been informed.</p>
                <p                 class="govuk-body"><a class="govuk-link" href="/appeals-service/appeal-details/1">Go back to case details</a>
                    </p>
            </div>
        </div>
    </div>
</main>"
`;

exports[`start-case GET /start-case/change/confirmation should render "Start date changed" confirmation page 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-width-container">
        <div class="govuk-grid-row">
            <div class="govuk-grid-column-two-thirds govuk-!-padding-top-2">
                <div class="govuk-panel govuk-panel--confirmation">
                    <h1 class="govuk-panel__title"> Start date changed</h1>
                    <div class="govuk-panel__body">Case reference number
                        <br><strong>351062</strong>
                    </div>
                </div>
                <p class="govuk-body">Case timetable updated. The relevant parties have been informed.</p>
                <p                 class="govuk-body"><a class="govuk-link" href="/appeals-service/appeal-details/1">Go back to case details</a>
                    </p>
            </div>
        </div>
    </div>
</main>"
`;
